[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="FOVRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="FOVLabel" type="Label" parent="Panel/VBox/FOVRow"]
layout_mode = 2
text = "FOV"
custom_minimum_size = Vector2(60, 0)

[node name="FOVSlider" type="HSlider" parent="Panel/VBox/FOVRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 50.0
max_value = 120.0
step = 1.0
value = 75.0

[node name="FOVValue" type="Label" parent="Panel/VBox/FOVRow"]
layout_mode = 2
text = "75"
custom_minimum_size = Vector2(36, 0)
horizontal_alignment = 2

[node name="SensRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="SensLabel" type="Label" parent="Panel/VBox/SensRow"]
layout_mode = 2
text = "Sensitivity"
custom_minimum_size = Vector2(100, 0)

[node name="SensSlider" type="HSlider" parent="Panel/VBox/SensRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.05
max_value = 2.0
step = 0.05
value = 0.5

[node name="SensValue" type="Label" parent="Panel/VBox/SensRow"]
layout_mode = 2
text = "0.50"
custom_minimum_size = Vector2(36, 0)
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ResumeBtn" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Resume"

[node name="BackToMenuBtn" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Back to Menu"

[node name="ExitBtn" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="Panel/VBox/ResumeBtn" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBox/BackToMenuBtn" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="Panel/VBox/ExitBtn" to="." method="_on_exit_pressed"]
